deploydir-prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aegis-prod-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aegis-prod
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aegis-prod
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - aegis-prod
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: aegis-prod-nginx
          image: asia.gcr.io/aegisapp/aegis_nginx:latest    # Container Resistoryにプッシュしたイメージを使用する
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
        - name: aegis-prod-php
          image: asia.gcr.io/aegisapp/aegis_php:latest
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 100m
