deploydir-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegis-prod-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"aegis-prod-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: aegis-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
